configure aws credentials for ci
Signed-off-by: Shayan Ahmadi <shayandi@amazon.com>

--- a/.github/workflows/canary-tests.yml
+++ b/.github/workflows/canary-tests.yml
@@ -5,12 +5,17 @@ on:
     - cron: '0 0 * * 0'  # Runs weekly on Sunday at midnight UTC
   workflow_dispatch:      # Allows manual trigger from GitHub UI
 
+permissions:
+  id-token: write
+  contents: read
+
 env:
   COGNITO_CLIENT_ID: ${{ secrets.COGNITO_CLIENT_ID }}
   COGNITO_TEST_USERNAME: ${{ secrets.COGNITO_TEST_USERNAME }}
   COGNITO_TEST_PASSWORD: ${{ secrets.COGNITO_TEST_PASSWORD }}
   COGNITO_CLIENT_SECRET: ${{ secrets.COGNITO_CLIENT_SECRET }}
   AWS_REGION: ${{ vars.AWS_REGION }}
+  AVP_ACCESS_ROLE: ${{ vars.AVP_ACCESS_ROLE }}
 
 jobs:
   express-compatibility:
@@ -26,19 +31,19 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-
+    - uses: ./.github/actions/aws-config
     - run: npm ci
 
-    - name: Install example app dependencies
+    - name: Install sample app dependencies
       run: |
-        cd example
+        cd examples/sample-app
         npm install
         npm install express@${{ matrix.express-version }}
         echo "Installed Express version:"
         npm ls express
 
     - name: Start Express App
-      run: cd example && npm start &
+      run: cd examples/sample-app && npm start &
 
     - name: Wait for server
       run: sleep 10
