--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,12 +14,14 @@ env:
   COGNITO_CLIENT_SECRET: ${{ secrets.COGNITO_CLIENT_SECRET }}
   AWS_REGION: ${{ vars.AWS_REGION }}
   AVP_ACCESS_ROLE: ${{ vars.AVP_ACCESS_ROLE }}
+  REPO_ACCESS_TOKEN: ${{ secrets.REPO_ACCESS_TOKEN }}
 
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - uses: ./.github/actions/authorizer-dep-setup
       - run: npm ci
       - name: Build the library
         run: npm run build
@@ -47,7 +49,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - uses: ./.github/actions/aws-config
-
+    - uses: ./.github/actions/authorizer-dep-setup
     - run: npm ci
     - name: Install sample app dependencies
       run: |
@@ -75,6 +77,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - uses: ./.github/actions/aws-config
+    - uses: ./.github/actions/authorizer-dep-setup
 
     - run: npm ci
     - name: Install sample app dependencies
