--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,10 @@
 name: CI
 
 # Temporarily Changed to manual trigger until sample app is ready
-on: workflow_dispatch
+on:
+  pull_request:
+    branches: [ main ]
+  workflow_dispatch:
 
 permissions:
   id-token: write
@@ -14,12 +17,14 @@ env:
   COGNITO_CLIENT_SECRET: ${{ secrets.COGNITO_CLIENT_SECRET }}
   AWS_REGION: ${{ vars.AWS_REGION }}
   AVP_ACCESS_ROLE: ${{ vars.AVP_ACCESS_ROLE }}
+  REPO_ACCESS_TOKEN: ${{ secrets.REPO_ACCESS_TOKEN }}
 
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - uses: ./.github/actions/authorizer-dep-setup
       - run: npm ci
       - name: Build the library
         run: npm run build
@@ -27,6 +32,7 @@ jobs:
         run: npm run test:unit
 
   integration-tests:
+    if: ${{ false }} # Temporarily skip until sample app is ready
     needs: build-and-test
     runs-on: ubuntu-latest
     strategy:
@@ -47,7 +53,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - uses: ./.github/actions/aws-config
-
+    - uses: ./.github/actions/authorizer-dep-setup
     - run: npm ci
     - name: Install sample app dependencies
       run: |
@@ -63,6 +69,7 @@ jobs:
       run: npm run test:integration
 
   integration-express-versions:
+    if: ${{ false }} # Temporarily skip until sample app is ready
     needs: build-and-test
     runs-on: ubuntu-latest
     strategy:
@@ -75,6 +82,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - uses: ./.github/actions/aws-config
+    - uses: ./.github/actions/authorizer-dep-setup
 
     - run: npm ci
     - name: Install sample app dependencies
