--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "homepage": "https://github.com/cedar-policy/authorization-for-expressjs#readme",
   "dependencies": {
-    "@cedar-policy/cedar-authorization": "file://../cedar-authorization",
+    "@cedar-policy/cedar-authorization": "^0.1.0",
     "@cedar-policy/cedar-wasm": "^4.4.0",
     "express": "^5.1.0",
     "path-to-regexp": "^8.2.0"
@@ -45,6 +45,9 @@
     "tsup": "^8.4.0",
     "typescript": "^5.8.3",
     "vitest": "^3.1.3"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.31.0"
   },
   "bin": "./node_modules/@cedar-policy/cedar-authorization/dist/bin.js"
 }
