--- a/examples/finish/package.json
+++ b/examples/finish/package.json
@@ -16,7 +16,7 @@
   "license": "ISC",
   "description": "A simple Express.js API for a pet store",
   "dependencies": {
-    "@cedar-policy/cedar-authorization": "file:../../../cedar-authorization",
+    "@cedar-policy/cedar-authorization": "^0.1.0",
     "@cedar-policy/authorization-for-expressjs": "file:../..",
     "body-parser": "^2.2.0",
     "express": "^5.1.0",
