use env var for group key
Signed-off-by: Shayan Ahmadi <shayandi@amazon.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ env:
   AWS_REGION: ${{ vars.AWS_REGION }}
   ISSUER_URI: ${{ secrets.ISSUER_URI }}
   JWKS_URI: ${{ secrets.JWKS_URI }}
+  IDP_GROUP_CLAIM_NAME: ${{ vars.IDP_GROUP_CLAIM_NAME }}
 
 jobs:
   build-and-test:
