--- a/.github/workflows/canary-tests.yml
+++ b/.github/workflows/canary-tests.yml
@@ -17,6 +17,7 @@ env:
   AWS_REGION: ${{ vars.AWS_REGION }}
   ISSUER_URI: ${{ secrets.ISSUER_URI }}
   JWKS_URI: ${{ secrets.JWKS_URI }}
+  IDP_GROUP_CLAIM_NAME: ${{ vars.IDP_GROUP_CLAIM_NAME }}
 
 jobs:
   express-compatibility:
